--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ form {
 input[type="email"],
 input[type="password"] {
     width: 100%;
+    z-index: 100%;
     padding: 10px;
     margin: 10px 0;
     border: none;
@@ -53,6 +54,7 @@ button {
     color: #fff;
     font-size: 16px;
     cursor: pointer;
+    z-index: 100%;
     transition: background 0.3s ease;
 }
 
